<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">

    <string name="app_name">Dash</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Dash</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_add_user">Add User</string>
    <string name="please_enter">Please enter</string>
    <string name="edit_fname">First Name</string>
    <string name="edit_sname">Second Name</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="edit_age">Age</string>
    <string name="edit_weight">Weight</string>
    <string name="edit_height">Height</string>
    <string name="add_user">Add user</string>
    <string name="cancel">Cancel</string>
    <string name="ViewRoute">View Route Traveled</string>
    <string name="title_activity_route_map">Route Map</string>
    <string name="overlay_start_title">Start</string>
    <string name="overlay_finish_title">Finish</string>
    <string name="title_activity_workout">Workouts</string>
    <string name="title_activity_location">Locations</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tracker">Tracker</string>
    <string name="checkinbtn">Checkin</string>
    <string name="checkin">Checkin</string>
    <!-- <string name="webServiceEndPoint">http://ec2-54-242-181-128.compute-1.amazonaws.com/dashwebsvc/index.php</string> -->
    <!-- <string name="webServiceEndPoint">http://dash.bugs3.com/dashwebsvc/index.php</string> -->
    <!-- ON CHANGING THE BELOW webServiceEndPoint, ENSURE YOU CHANGE webServiceEndPointNoFile to be the same (minus /index.php) -->
    <string name="webServiceEndPoint">http://dash.host-ed.me/dashwebsvc/index.php</string>
    <string name="webServiceEndPointNoFile">http://dash.host-ed.me/dashwebsvc</string>
    <string name="getVenues">/LocationSearch/index</string>
    <string name="registerUser">/UserAccount/register_user</string>
    <string name="checkinUser">/LocationSearch/checkin</string>
    <string name="fetchLocation">/LocationSearch/fetch_location</string>
    <string name="fetchUser">/UserAccount/fetch_user</string>
    <string name="followUser">/UserAccount/follow_user</string>
    <string name="addReview">/LocationSearch/add_review</string>
    <string name="fetch_following">/UserAccount/fetch_following</string>
    <string name="fetch_followers">/UserAccount/fetch_followers</string>
    <string name="fetch_checkins">/LocationSearch/fetch_checkins</string>
    <string name="fetch_reviews">/LocationSearch/fetch_reviews</string>
    <string name="rateReview">/uncoverted_php/updateReview.php</string>
    <string name="title_activity_check_in">CheckIn</string>
    <string name="title_activity_venue">Venue</string>
    <string name="webServiceEndPointBen">http://dash.bugs3.com/dashwebsvc/index.php</string>
    <string name="HTTPResponse" />
    <string name="title_activity_add_review">Add Review</string>
    <string name="title_activity_follow">FollowActivity</string>
    <string name="title_activity_user_follow">UserFollow</string>
    <string name="title_activity_user_checkins">UserCheckins</string>
    <string name="title_activity_user_reviews">UserReviews</string>

</resources>